--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "altcha": "^2.1.0",
+    "altcha-lib": "^1.3.0",
     "next": "15.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
