--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@neondatabase/serverless": "^1.0.1",
     "altcha": "^2.1.0",
     "altcha-lib": "^1.3.0",
     "next": "15.4.6",
